Fix article sidenote alignment

--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -119,7 +119,8 @@
   font-size: $b-fontSize-s
   font-style: italic
   left: 100%
-  padding-left: $b-space-l
+  margin-left: $g-gutter * 2
+  padding-right: $g-gutter * 0.5
   position: absolute
   top: 0
   width: percentage( 1 / 2 )
